# Final-project

./: .gitignore
EconomicForecasting/: CMakeLists.txt
EconomicForecasting/include/ef/: ARIMAModel.hpp  DataLoader.hpp  DataStructures.hpp  Evaluator.hpp  FeatureGenerator.hpp  ForecastModel.hpp  Preprocessor.hpp  Visualizer.hpp  XGBoostModel.hpp
EconomicForecasting/include/matplot/: matplot.h
EconomicForecasting/src/: ARIMAModel.cpp  DataLoader.cpp  DataStructures.cpp  Evaluator.cpp  FeatureGenerator.cpp  ForecastModel.cpp  Preprocessor.cpp  Visualizer.cpp  XGBoostModel.cpp  main.cpp
EconomicForecasting/tests/: ARIMAModelTest.cpp  CMakeLists.txt  DataLoaderTest.cpp  DataStructuresTest.cpp  EvaluatorTest.cpp  FeatureGeneratorTest.cpp  ForecastModelTest.cpp  PreprocessorTest.cpp  VisualizerTest.cpp  XGBoostModelTest.cpp
FREDProject/: CMakeLists.txt  README.md
FREDProject/include/: data_cleaner.hpp  forecast.hpp  fred_loader.hpp  output_writer.hpp  plot.hpp  utils.hpp
FREDProject/src/: data_cleaner.cpp  forecast.cpp  fred_loader.cpp  main.cpp  output_writer.cpp  plot.cpp  utils.cpp
